Change footer text, move and scale social icons, fix landing page spacing, remove questions from landing page, add upcoming events background

--- a/src/components/LandingPageComponents/styles/PreviousClientsStyle.css
+++ b/src/components/LandingPageComponents/styles/PreviousClientsStyle.css
@@ -23,3 +23,9 @@
 
     color: #93B769;
 }
+
+#spacerDiv {
+    width: 100%;
+    height: 40px;
+    background-color: #72B745;
+}
